FIX Fixed the text overflow inside the leaflet popups

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -234,6 +234,8 @@ html.sap-phone .sapMWizard .sapMWizardNextButtonVisible {position: relative !imp
 .exf-map {z-index: 0}
 .exf-map-popup h3 {padding-left: 0}
 .exf-map-popup-table > tbody > tr > td:nth-of-type(2) {font-weight: bold}
+.exf-map-popup .exf-map-popup-table td {vertical-align: top;}
+.exf-map-popup .exf-map-popup-table td:last-child {overflow-wrap: anywhere; word-break: break-word;}
 .exf-map .extra-marker > i.fa-map-marker {margin-top: 8px !important;}
 .exf-map .extra-marker > .exf-svg-icon > svg {height: 20px; margin-top: 8px; fill: white;}
 .exf-map .leaflet-marker-icon.selected:not(.exf-map-point)::before {content: ''; display: block; width: 40px; height: 27px; -moz-border-radius: 7.5px; -webkit-border-radius: 7.5px; border-radius: 50%; border: 5px solid gray; position: absolute; top: 23px; left: -7px; z-index: -1;}
